tests/ui/layout/zero-sized-array-enum-niche.stderr
error: layout_of(Result<[u32; 0], bool>) = Layout {
           size: Size(4 bytes),
           align: AbiAlign {
               abi: Align(4 bytes),
           },
           backend_repr: Memory {
               sized: true,
           },
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
               ],
               in_memory_order: [
                   0,
               ],
           },
           largest_niche: Some(
               Niche {
                   offset: Size(0 bytes),
                   value: Int(
                       I8,
                       false,
                   ),
                   valid_range: 0..=1,
               },
           ),
           uninhabited: false,
           variants: Multiple {
               tag: Initialized {
                   value: Int(
                       I8,
                       false,
                   ),
                   valid_range: 0..=1,
               },
               tag_encoding: Direct,
               tag_field: 0,
               variants: [
                   VariantLayout {
                       size: Size(4 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [
                           Size(4 bytes),
                       ],
                       fields_in_memory_order: [
                           0,
                       ],
                       uninhabited: false,
                   },
                   VariantLayout {
                       size: Size(2 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [
                           Size(1 bytes),
                       ],
                       fields_in_memory_order: [
                           0,
                       ],
                       uninhabited: false,
                   },
               ],
           },
           max_repr_align: None,
           unadjusted_abi_align: Align(4 bytes),
           randomization_seed: $SEED,
       }
  --> $DIR/zero-sized-array-enum-niche.rs:14:1
   |
LL | type AlignedResult = Result<[u32; 0], bool>;
   | ^^^^^^^^^^^^^^^^^^

error: layout_of(MultipleAlignments) = Layout {
           size: Size(4 bytes),
           align: AbiAlign {
               abi: Align(4 bytes),
           },
           backend_repr: Memory {
               sized: true,
           },
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
               ],
               in_memory_order: [
                   0,
               ],
           },
           largest_niche: Some(
               Niche {
                   offset: Size(0 bytes),
                   value: Int(
                       I8,
                       false,
                   ),
                   valid_range: 0..=2,
               },
           ),
           uninhabited: false,
           variants: Multiple {
               tag: Initialized {
                   value: Int(
                       I8,
                       false,
                   ),
                   valid_range: 0..=2,
               },
               tag_encoding: Direct,
               tag_field: 0,
               variants: [
                   VariantLayout {
                       size: Size(2 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [
                           Size(2 bytes),
                       ],
                       fields_in_memory_order: [
                           0,
                       ],
                       uninhabited: false,
                   },
                   VariantLayout {
                       size: Size(4 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [
                           Size(4 bytes),
                       ],
                       fields_in_memory_order: [
                           0,
                       ],
                       uninhabited: false,
                   },
                   VariantLayout {
                       size: Size(2 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [
                           Size(1 bytes),
                       ],
                       fields_in_memory_order: [
                           0,
                       ],
                       uninhabited: false,
                   },
               ],
           },
           max_repr_align: None,
           unadjusted_abi_align: Align(4 bytes),
           randomization_seed: $SEED,
       }
  --> $DIR/zero-sized-array-enum-niche.rs:22:1
   |
LL | enum MultipleAlignments {
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: layout_of(Result<[u32; 0], Packed<NonZero<u16>>>) = Layout {
           size: Size(4 bytes),
           align: AbiAlign {
               abi: Align(4 bytes),
           },
           backend_repr: Memory {
               sized: true,
           },
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
               ],
               in_memory_order: [
                   0,
               ],
           },
           largest_niche: Some(
               Niche {
                   offset: Size(0 bytes),
                   value: Int(
                       I8,
                       false,
                   ),
                   valid_range: 0..=1,
               },
           ),
           uninhabited: false,
           variants: Multiple {
               tag: Initialized {
                   value: Int(
                       I8,
                       false,
                   ),
                   valid_range: 0..=1,
               },
               tag_encoding: Direct,
               tag_field: 0,
               variants: [
                   VariantLayout {
                       size: Size(4 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [
                           Size(4 bytes),
                       ],
                       fields_in_memory_order: [
                           0,
                       ],
                       uninhabited: false,
                   },
                   VariantLayout {
                       size: Size(3 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [
                           Size(1 bytes),
                       ],
                       fields_in_memory_order: [
                           0,
                       ],
                       uninhabited: false,
                   },
               ],
           },
           max_repr_align: None,
           unadjusted_abi_align: Align(4 bytes),
           randomization_seed: $SEED,
       }
  --> $DIR/zero-sized-array-enum-niche.rs:38:1
   |
LL | type NicheLosesToTagged = Result<[u32; 0], Packed<std::num::NonZero<u16>>>;
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: layout_of(Result<[u32; 0], Packed<U16IsZero>>) = Layout {
           size: Size(4 bytes),
           align: AbiAlign {
               abi: Align(4 bytes),
           },
           backend_repr: Memory {
               sized: true,
           },
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
               ],
               in_memory_order: [
                   0,
               ],
           },
           largest_niche: Some(
               Niche {
                   offset: Size(0 bytes),
                   value: Int(
                       I16,
                       false,
                   ),
                   valid_range: 0..=1,
               },
           ),
           uninhabited: false,
           variants: Multiple {
               tag: Initialized {
                   value: Int(
                       I16,
                       false,
                   ),
                   valid_range: 0..=1,
               },
               tag_encoding: Niche {
                   untagged_variant: 1,
                   niche_variants: 0..=0,
                   niche_start: 1,
               },
               tag_field: 0,
               variants: [
                   VariantLayout {
                       size: Size(0 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [
                           Size(0 bytes),
                       ],
                       fields_in_memory_order: [
                           0,
                       ],
                       uninhabited: false,
                   },
                   VariantLayout {
                       size: Size(2 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [
                           Size(0 bytes),
                       ],
                       fields_in_memory_order: [
                           0,
                       ],
                       uninhabited: false,
                   },
               ],
           },
           max_repr_align: None,
           unadjusted_abi_align: Align(4 bytes),
           randomization_seed: $SEED,
       }
  --> $DIR/zero-sized-array-enum-niche.rs:45:1
   |
LL | type NicheWinsOverTagged = Result<[u32; 0], Packed<U16IsZero>>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

